--- a/application/backend/view/login.html
+++ b/application/backend/view/login.html
@@ -23,7 +23,7 @@
 <div class="login_padding" id="login_model">
   <h2>用户ID</h2>
   <label>
-    <input type="text" id="username" class="txt_input txt_input2" placeholder="请输入ID" value="123">
+    <input type="text" id="username" class="txt_input txt_input2" placeholder="请输入ID" value="1">
   </label>
   <h2>密码</h2>
   <label>
@@ -57,8 +57,8 @@
 <script type="text/javascript">
 $('#login_btn').on('click',function(){
   var data = {
-    eid:'123',
-    epassword:hex_md5('000'),
+    employeeid:'1',
+    password:hex_md5('000'),
     code : $('#userCode').val()
   }
   $.ajax({
