--- a/application/backend/view/admin.html
+++ b/application/backend/view/admin.html
@@ -22,38 +22,44 @@
 <div class = 'nav'>当前位置：/系统管理/员工管理</div>
 <div class = 'btn_line_box'>
     <div class = 'btn_one' id = 'add_admin' href = "{:url('backend/index/add_admin')}" target="ifr">添加</div>
-    <div class = 'btn_one' id = 'lock_admin' v:on-click = 'lockOrUse()'>使用/锁定</div>
+    <div class = 'btn_one' id = 'useAdmin' v-on:click='useAdmin()'>使用</div>
+    <div class = 'btn_one' id = 'lockAdmin' v-on:click='lockAdmin()'>锁定</div>
     <span>用户状态</span>
-    <select id = 'admin_con_sel' v:on-click = 'conChave()'>
+    <select id = 'admin_con_sel'>
         <option value = '0' selected="selected">使用</option>
         <option value = '1'>锁定</option>
     </select>
 </div>
 <table class = 'admin_table table0' border="1" cellpaddiv="0" cellspaciv="0">
     <tr>
-        <td colspan="6">用户列表</td>
+        <td colspan="7">用户列表</td>
     </tr>
     <tr>
-        <th><input type="checkbox" name=""></th>
-        <th>账户</th>
+        <th><input type="checkbox" name="" v-on:click='adminArrAll()' id = 'adminArrAll'></th>
+        <th>id</th>
+        <th>账号</th>
         <th>用户名称</th>
         <th>用户角色</th>
         <th>用户状态</th>
         <th>操作</th>
     </tr>
     <tr v-for = 'x in adminArr'>
-        <td><input type="checkbox" class = 'lockChk'></td>
-        <td>{{x.eid}}</td>
-        <td>{{x.ename}}</td>
+        <!-- <td><input type="checkbox" class = 'lockChk'  v-on:click="lockClick(x.employeeid)" checked='{{x.chk}}'></td> -->
+        <td><input type="checkbox" class = 'lockChk'  v-on:click="lockClick(x.employeeid)"></td>
+        <td>{{x.employeeid}}</td>
+        <td>{{x.account}}</td>
+        <td>{{x.name}}</td>
         <td>{{x.rname}}</td>
         <td>
-            <span v-if = 'x.e_del==0'>使用</span>
-            <span v-if = 'x.e_del==1'>锁定</span>
+           <!--  <span v-if = 'x.locking==""'>使用</span>
+            <span v-if = 'x.locking==""'>锁定</span>
+ -->            
+            <span>{{x.locking}}</span>
         </td>
         <td>
-            <input type="button" value="修改信息" class = 'editAdmin' name="" v-on:click="editAdmin(x.eid,x.rid)">
-            <input type="button" value="修改密码" class = 'editAdmin' name="" v-on:click="editPsw(x.eid)">
-            <input type="button" value="删除" class = 'delAdmin'  v-on:click="delAdmin(x.eid)" name="">
+            <input type="button" value="修改信息" class = 'editAdmin' name="" v-on:click="editAdmin(x.employeeid,x.roleid)">
+            <input type="button" value="修改密码" class = 'editAdmin' name="" v-on:click="editPsw(x.employeeid)">
+            <input type="button" value="删除" class = 'delAdmin'  v-on:click="delAdmin(x.employeeid)" name="">
         </td>
     </tr>
 </table>
@@ -73,14 +79,36 @@
 var myVue = new Vue({          
     el: "#app",          
     data: {
-        a: "Vue.js"  ,
         adminArr:[] ,
-        page:[]    
+        page:[] 
     },         
     methods:{
-        lockOrUse:function(){},
-        lockOrUse:function(){},
-        conChave:function(){},    
+        useAdmin:function(){
+            // console.log('haha');
+            console.log(this.adminArr);
+            $.ajax({
+                url:'{:url("backend/User/useAdmin")}',
+                dataType:'json',
+                type:'POST',
+                data:'data='+JSON.stringify(this.adminArr),
+                success:function(res){
+                    window.location.reload();
+                }
+            }) ;
+            
+        },
+        lockAdmin:function(){
+            console.log(this.adminArr);
+            $.ajax({
+                url:'{:url("backend/User/lockAdmin")}',
+                dataType:'json',
+                type:'POST',
+                data:'data='+JSON.stringify(this.adminArr),
+                success:function(res){
+                    window.location.reload();
+                }
+            }) ;
+        },
         getAdmin:function(index){
             $.ajax({
                 url:'{:url("backend/User/getAdmin")}',
@@ -88,8 +116,12 @@ var myVue = new Vue({
                 type:'POST',
                 data:'page='+index,
                 success:function(res){
-                    console.log(res);
-                    this.adminArr = res;
+                for(var i = 0;i < res.length;i++){
+                    res[i].chk='false'; 
+                }
+                $('.lockChk').prop('checked',false);
+                $('#adminArrAll').prop('checked',false);
+                this.adminArr = res;
                 }.bind(this)
             }) ;
         },
@@ -98,7 +130,7 @@ var myVue = new Vue({
                 url:'{:url("backend/User/delAdmin")}',
                 dataType:'json',
                 type:'POST',
-                data:'eid='+index,
+                data:'employeeid='+index,
                 success:function(res){
                     console.log(res);
                     window.location.reload();
@@ -135,6 +167,43 @@ var myVue = new Vue({
                 });
               //触发事件
             });
+        },
+        //勾选事件
+        lockClick:function(id){
+            for(var i = 0;i<this.adminArr.length;i++){
+                if(this.adminArr[i].employeeid == id){
+                    // console.log(this.adminArr[i].chk);
+                    if(this.adminArr[i].chk == 'false'){
+                        this.adminArr[i].chk = true
+                    }else{
+                        this.adminArr[i].chk = false
+                    }
+                    // console.log(this.adminArr[i].chk);
+                }
+            }
+            // console.log(this.adminArr);
+        },
+        //全选事件
+        adminArrAll:function(){
+            var temp = false;
+            var count = 0;
+            for(var i = 0;i<this.adminArr.length;i++){
+                if(this.adminArr[i].chk == true){
+                    count++;
+                }
+            }
+            if(count == 0){
+                temp = true
+            }else if(count == this.adminArr.length){
+                temp = false;
+            }else{
+                temp = true
+            }
+            for(var i = 0;i<this.adminArr.length;i++){
+                this.adminArr[i].chk = temp;
+            }
+            $('.lockChk').prop('checked',temp)
+            // console.log(this.adminArr);
         }
     },
 
@@ -160,6 +229,9 @@ var myVue = new Vue({
             data:'page=1',
             success:function(res){
                 console.log(res);
+                for(var i = 0;i < res.length;i++){
+                    res[i].chk='false'; 
+                }
                 this.adminArr = res;
             }.bind(this)
         }) ;
