--- a/application/backend/view/add_admin.html
+++ b/application/backend/view/add_admin.html
@@ -13,23 +13,36 @@
 
 <form class="layui-form"> <!-- 提示：如果你不想用form，你可以换成div等任何一个普通元素 -->
   <div class="layui-form-item">
+    <label class="layui-form-label">账号</label>
+    <div class="layui-input-block">
+      <input type="text" name="account" placeholder="3到16位（字母，数字，下划线，减号）" autocomplete="off" class="layui-input" lay-verify="required|account">
+    </div>
+  </div>
+  <div class="layui-form-item">
     <label class="layui-form-label">用户名称</label>
     <div class="layui-input-block">
-      <input type="text" name="ename" placeholder="请输入" autocomplete="off" class="layui-input" lay-verify="required|username">
+      <input type="text" name="name" placeholder="请输入" autocomplete="off" class="layui-input" lay-verify="required|username">
     </div>
   </div>
   <div class="layui-form-item">
     <label class="layui-form-label">用户密码</label>
     <div class="layui-input-block">
-      <input type="text" name="epassword" placeholder="请输入" autocomplete="off" class="layui-input" lay-verify="required|psw">
+      <input type="text" name="password" placeholder="请输入" autocomplete="off" class="layui-input" lay-verify="required|psw">
     </div>
   </div>
   <div class="layui-form-item">
     <label class="layui-form-label">用户权限</label>
     <div class="layui-input-block">
-      <select id = 'add_admin_role' name = 'rid'>
-      	<option></option>
+      <select id = 'add_admin_role' name = 'roleid'>
+        <option></option>
       </select>
+    </div>
+  </div>
+  <div class="layui-form-item">
+    <label class="layui-form-label">单选框</label>
+    <div class="layui-input-block">
+      <input type="radio" name="locking" value="使用" title="使用" checked="">
+      <input type="radio" name="locking" value="锁定" title="锁定">
     </div>
   </div>
   <div class="layui-form-item">
@@ -61,7 +74,7 @@ layui.use(['form', 'layedit', 'laydate'], function(){
         	data = data.data;
             $("#add_admin_role").html("");
             $.each(data, function(key, val) {
-                var option1 = $("<option>").val(val.rid).text(val.rname);
+                var option1 = $("<option>").val(val.roleid).text(val.rname);
                 $("#add_admin_role").append(option1);
             }); 
             form.render('select');
@@ -70,21 +83,29 @@ layui.use(['form', 'layedit', 'laydate'], function(){
     })
   //自定义验证规则  
   form.verify({  
-        admin_id: function(value){  
-          if(value.length < 5){  
-            return '标题至少得3个字符啊';  
-          }  
-        }, username: function(value){  
-          if(value.length < 1){  
-            return '请输入至少1位的用户名';  
-          }  
-        }, psw: function(value){  
-          if(value.length < 1){  
-            return '密码请输入至少1个字符';  
-          }  
-        }  
-        ,phone: [/^1[3|4|5|7|8]\d{9}$/, '手机必须11位，只能是数字！']  
-        ,email: [/^[a-z0-9._%-]+@([a-z0-9-]+\.)+[a-z]{2,4}$|^1[3|4|5|7|8]\d{9}$/, '邮箱格式不对']  
+    account: function(value){  
+      //用户名正则，3到16位（字母，数字，下划线，减号）
+      var uPattern = /^[a-zA-Z0-9_-]{3,16}$/;
+      //输出 true
+      var ans = uPattern.test(value);
+      if(value.length < 3){  
+        return '账号至少3个字符';  
+      }else if(ans == false){
+        return '账号不符合要求'
+      }
+    }, 
+    username: function(value){  
+      if(value.length < 1){  
+        return '请输入至少1位的用户名';  
+      }  
+    }, 
+    psw: function(value){  
+      if(value.length < 1){  
+        return '密码请输入至少1个字符';  
+      }  
+    }  
+    ,phone: [/^1[3|4|5|7|8]\d{9}$/, '手机必须11位，只能是数字！']  
+    ,email: [/^[a-z0-9._%-]+@([a-z0-9-]+\.)+[a-z]{2,4}$|^1[3|4|5|7|8]\d{9}$/, '邮箱格式不对']  
   });  
     
   //创建一个编辑器  
@@ -102,14 +123,22 @@ layui.use(['form', 'layedit', 'laydate'], function(){
     // console.log(data.elem) //被执行事件的元素DOM对象，一般为button对象
     // console.log(data.form) //被执行提交的form对象，一般在存在form标签时才会返回
     console.log(data.field) //当前容器的全部表单字段，名值对形式：{name: value}
-    data.field.epassword = hex_md5(data.field.epassword);
+    data.field.password = hex_md5(data.field.password);
     $.ajax({
       url:'{:url("backend/User/addAdmin")}',
       dataType:'json',
       type:'POST',
       data:data.field,
       success:function(res){
-        window.parent.location.reload();
+        console.log(res);
+        if(res == true){
+          window.parent.location.reload();
+        }else if(res == 'accountSame'){
+          layer.msg('用户名重名');
+        }else{
+          layer.msg('新增管理员失败');
+        }
+        
 
       }
     })
