--- a/application/backend/view/admin.html
+++ b/application/backend/view/admin.html
@@ -24,11 +24,11 @@
     <div class = 'btn_one' id = 'add_admin' href = "{:url('backend/index/add_admin')}" target="ifr">添加</div>
     <div class = 'btn_one' id = 'useAdmin' v-on:click='useAdmin()'>使用</div>
     <div class = 'btn_one' id = 'lockAdmin' v-on:click='lockAdmin()'>锁定</div>
-    <span>用户状态</span>
+<!--     <span>用户状态</span>
     <select id = 'admin_con_sel'>
         <option value = '0' selected="selected">使用</option>
         <option value = '1'>锁定</option>
-    </select>
+    </select> -->
 </div>
 <table class = 'admin_table table0' border="1" cellpaddiv="0" cellspaciv="0">
     <tr>
