--- a/application/backend/view/user.html
+++ b/application/backend/view/user.html
@@ -33,7 +33,7 @@
 <div>
 <div class = 'nav'>当前位置：/系统管理/用户管理</div>
 <div class = 'btn_line_box'>
-    <div class="layui-btn" id = 'add_user' href = "{:url('backend/User/add_user')}" target="ifr">添加用户</div>
+    <div class="layui-btn" id = 'add_user'>添加用户</div>
 </div>
 
 <div id = 'user_table' lay-filter = 'user_table0'>
@@ -56,26 +56,44 @@
 
 
 
-layui.use(['layer','table'], function(){ 
+layui.use(['layer','table','form'], function(){ 
     var layer = layui.layer;
     var table = layui.table; 
-    table.render({
-        elem: '#user_table'
-        ,page:true
-        ,url:"../user/getUser"
-        ,cols: [[{field:'uname',title:'用户账号'}
-            ,{field:'nickname',title:'用户昵称',edit:'text'}
-            ,{field:'uphoneNo',title:'用户电话',edit:'text'}
-            ,{field:'uemail',title:'用户邮箱',edit:'text'}
-            ,{field:'uintegral',title:'用户积分',edit:'text'}
-            ,{title:'用户性别',toolbar:'#sex',width:130}
-            ,{field:'uIcon',title:'用户头像',templet:'#img'}
-            ,{field:'umoney',title:'用户余额',edit:'text'}
-            // ,{field:'hsid',title:'使用/锁定',edit:'text'}
-            ,{field:'uregisterTime',title:'注册时间'}
-            ,{fixed:'right',title:'操作',toolbar:'#tableBar'}
-        ]] 
-    }); 
+    var form = layui.form; 
+
+    form.on('radio(sex)',function(data){
+        console.log(data);
+        layer.editUserInfo(data.elem.name,'ugender',data.value)
+    })
+    form.on('checkbox(lock)',function(data){
+        console.log(data);
+        if(data.value == '使用'){
+            layer.editUserInfo(data.elem.name,'locking','锁定')
+        }else{
+            layer.editUserInfo(data.elem.name,'locking','使用')
+        }
+        layer.tableRender();
+    })
+    layer.tableRender = function(){
+        table.render({
+            elem: '#user_table'
+            ,page:true
+            ,url:"../user/getUser"
+            ,cols: [[{field:'uname',title:'用户账号',edit:'text'}
+                ,{field:'nickname',title:'用户昵称',edit:'text'}
+                ,{field:'uphoneNo',title:'用户电话',edit:'text'}
+                ,{field:'uemail',title:'用户邮箱',edit:'text'}
+                ,{field:'uintegral',title:'用户积分',edit:'text'}
+                ,{title:'用户性别',toolbar:'#sex',width:130}
+                ,{field:'uIcon',title:'用户头像',templet:'#img'}
+                ,{field:'umoney',title:'用户余额',edit:'text'}
+                // ,{field:'hsid',title:'使用/锁定',edit:'text'}
+                ,{field:'uregisterTime',title:'注册时间'}
+                ,{fixed:'right',title:'操作',toolbar:'#tableBar'}
+            ]] 
+        });
+    } 
+    layer.tableRender();
   //触发事件
   //
   //
@@ -100,15 +118,6 @@ layui.use(['layer','table'], function(){
                 });
               //触发事件
             });
-
-            // $.ajax({
-            //     url:'{:url("backend/User/edit_user_power")}',
-            //     dataType:'json',
-            //     type:'GET',
-            //     success:function(res){
-            //         console.log(res);
-            //     }.bind(this)
-            // }) ;
         }
         else if(layEvent === 'Lock')
         {
@@ -128,21 +137,90 @@ layui.use(['layer','table'], function(){
             });
         }
     });
-    table.on('edit(user_table0)', function(obj){ //注：edit是固定事件名，test是table原始容器的属性 lay-filter="对应的值"
-        console.log(obj.value); //得到修改后的值
-        console.log(obj.field); //当前编辑的字段名
-        console.log(obj.data); //所在行的所有相关数据 
+    //更新数据
+    layer.editUserInfo = function(id,key,value){
         $.ajax({
             url:'{:url("backend/User/editUserInfo")}',
             dataType:'json',
             type:'POST',
-            data:'userid='+obj.data.userid+'&key='+obj.field+'&value='+obj.value,
+            data:'userid='+id+'&key='+key+'&value='+value,
             success:function(res){
                 console.log(res);
-            }.bind(this)
+                if(res == false){
+                    layer.msg('编辑失败');
+                    layer.tableRender();
+                }
+            }
         }) ; 
-    });
 
+    }
+    table.on('edit(user_table0)', function(obj){ //注：edit是固定事件名，test是table原始容器的属性 lay-filter="对应的值"
+        console.log(obj.value); //得到修改后的值
+        console.log(obj.field); //当前编辑的字段名
+        console.log(obj.data); //所在行的所有相关数据
+        //用户名验证 
+        if(obj.field == 'uname'){
+            $.ajax({
+                url:'{:url("backend/User/userNameSame")}',
+                dataType:'json',
+                type:'POST',
+                data:'uname='+obj.value,
+                success:function(res){
+                    if(res == 'true'){
+                        layer.msg('用户名重名');
+                        layer.tableRender()
+                        return;
+                    }else{
+                        layer.editUserInfo(obj.data.userid,obj.field,obj.value)
+                    }
+                }
+            }) ;
+            //手机验证
+        }else if(obj.field == 'uphoneNo'){
+            if(Number(obj.value) != obj.value){
+                layer.msg('电话必须为纯数字');
+                layer.tableRender();
+            }else{
+                layer.editUserInfo(obj.data.userid,obj.field,obj.value);
+            }
+            //积分验证
+        }else if(obj.field == 'uintegral'){
+            if(Number(obj.value) != obj.value){
+                layer.msg('积分必须为纯数字');
+                layer.tableRender();
+            }else if(obj.value<0){
+                layer.msg('积分必须为正数');
+                layer.tableRender();
+            }else{
+                layer.editUserInfo(obj.data.userid,obj.field,obj.value);
+            }
+            //余额验证
+        }else if(obj.field == 'umoney'){
+            if(Number(obj.value) != obj.value){
+                layer.msg('余额必须为纯数字');
+                layer.tableRender();
+            }else if(obj.value<0){
+                layer.msg('余额必须为正数');
+                layer.tableRender();
+            }else{
+                layer.editUserInfo(obj.data.userid,obj.field,obj.value);
+            }
+            //邮箱验证
+        }else if(obj.field == 'uemail'){
+            var regEmail = /^[a-z0-9._%-]+@([a-z0-9-]+\.)+[a-z]{2,4}$|^1[3|4|5|7|8]\d{9}$/;
+            //输出 true
+            var ans = regEmail.test(obj.value);
+            if(ans == false){
+                layer.msg('邮箱格式错误');
+                layer.tableRender();
+            }else{
+                layer.editUserInfo(obj.data.userid,obj.field,obj.value);
+            }
+        }else{
+            layer.editUserInfo(obj.data.userid,obj.field,obj.value);
+
+        }
+    });
 
 
     layer.lockUser = function(data,index){
@@ -186,12 +264,12 @@ document.getElementById('add_user').onclick = function(){
 <script type="text/html" id="tableBar">
   <!-- <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="Lock">锁定/解锁</a> -->
   <!-- <a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="edit_user_power">修改权限</a> -->
-  <input type="checkbox" name="lock" value="{{d.locking}}" title="锁定" lay-filter="lockDemo" {{ d.locking == '锁定' ? 'checked' : '' }}>
+  <input type="checkbox" name="{{d.userid}}" value="{{d.locking}}" title="锁定" lay-filter="lock"  {{ d.locking == '锁定' ? 'checked' : '' }}>
 </script>
 <script type="text/html" id="sex">
     <!-- <div class="layui-input-block"> -->
-      <input type="radio" name="{{d.uname}}" value="男" title="男" value="{{d.ugender}}" {{ d.ugender == '男' ? 'checked' : '' }}>
-      <input type="radio" name="{{d.uname}}" value="女" title="女" value="{{d.ugender}}" {{ d.ugender == '女' ? 'checked' : '' }}>
+      <input type="radio" name="{{d.userid}}" value="男" title="男" value="{{d.ugender}}" lay-filter="sex" {{ d.ugender == '男' ? 'checked' : '' }}>
+      <input type="radio" name="{{d.userid}}" value="女" title="女" value="{{d.ugender}}" lay-filter="sex" {{ d.ugender == '女' ? 'checked' : '' }}>
     <!-- </div> -->
 </script>
 
