--- a/application/index/view/goodsInfo.html
+++ b/application/index/view/goodsInfo.html
@@ -7,6 +7,7 @@
   <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
   <link rel="stylesheet" href="__STATIC__/layui/css/layui.css"  media="all">
+  <link rel="stylesheet" href="__STATIC__/layui/css/layui_front.css"  media="all">
   <!-- 注意：如果你直接复制所有代码到本地，上述css路径需要改成你本地的 -->
 </head>
 <body>
