--- a/application/index/view/user_center.html
+++ b/application/index/view/user_center.html
@@ -3,8 +3,9 @@
 <head>
   <meta charset="utf-8">
   <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
-  <title>说走就走后台</title>
+  <title>个人中心</title>
   <link rel="stylesheet" href="__STATIC__/layui/css/layui.css">
+  <link rel="stylesheet" href="__STATIC__/layui/css/layui_front.css"  media="all">
   <link rel="stylesheet" type="text/css" href="__CSS__/backend.css">
 </head>
 <body class="layui-layout-body">
