--- a/application/backend/view/paid.html
+++ b/application/backend/view/paid.html
@@ -23,18 +23,19 @@
 	  <div class="layui-tab-content" style="height: 100px;">
 	    <!--全部订单-->
 	    <div class="layui-tab-item">
-	    	<table class="layui-table" lay-data="{width: 'full', height:'full', url:'../goods/getallpaid', page:true, id:'allpaid'}" lay-filter="demo">
+	    	<table class="layui-table" lay-size="lg" lay-data="{width: 'full', height:'full', url:'../goods/getallpaid', page:true, id:'allpaid'}" lay-filter="demo">
 	    		<thead>
 	    			<tr>
 	    				<th lay-data="{type:'checkbox', fixed: 'left'}"></th>
 	    				<th lay-data="{field:'orderid', width:80, sort: true, fixed: true}">订单ID</th>
-	    				<th lay-data="{field:'userid', width:80}">用户id</th>
-	    				<th lay-data="{field:'image', width:80}">图片</th>
+	    				<th lay-data="{field:'uname', width:80}">用户名</th>
+	    				<th lay-data="{field:'image', width:120, templet:'#goodsImage'}">图片</th>
 	    				<th lay-data="{field:'name', width:100}">景点名</th>
 	    				<th lay-data="{field:'price', width:80}">单价</th>
-	    				<th lay-data="{field:'orderqty', width:120, sort: true}">购买数量</th>
+	    				<th lay-data="{field:'orderqty', width:100, sort: true}">购买数量</th>
 	    				<th lay-data="{field:'orderprice', width:80, sort: true}">总价</th>
 	    				<th lay-data="{field:'osname', width:90}">订单状态</th>
+	    				<th lay-data="{field:'ordernote', width:120}">订单备注</th>
 	    				<th lay-data="{fixed: 'right', width:178, align:'center', toolbar: '#barDemo'}"></th>
 	    			</tr>
 	    		</thead>
@@ -47,18 +48,19 @@
 	    	<div class="layui-btn-group demoTable">
 	    		<button class="layui-btn" data-type="getCheckData">批量关闭交易</button>
 	    	</div>
-	    	<table class="layui-table" lay-data="{width: 'full', height:'full', url:'../goods/getpaid', page:true, id:'idTest'}" lay-filter="demo">
+	    	<table class="layui-table" lay-size="lg" lay-data="{width: 'full', height:'full', url:'../goods/getpaid', page:true, id:'idTest'}" lay-filter="demo">
 	    		<thead>
 	    			<tr>
 	    				<th lay-data="{type:'checkbox', fixed: 'left'}"></th>
 	    				<th lay-data="{field:'orderid', width:80, sort: true, fixed: true}">订单ID</th>
-	    				<th lay-data="{field:'userid', width:80}">用户id</th>
-	    				<th lay-data="{field:'image', width:80, templet:'#goodsImage'}">图片</th>
+	    				<th lay-data="{field:'uname', width:80}">用户名</th>
+	    				<th lay-data="{field:'image', width:120, templet:'#goodsImage'}">图片</th>
 	    				<th lay-data="{field:'name', width:100}">景点名</th>
 	    				<th lay-data="{field:'price', width:80}">单价</th>
-	    				<th lay-data="{field:'orderqty', width:120, sort: true}">购买数量</th>
+	    				<th lay-data="{field:'orderqty', width:100, sort: true}">购买数量</th>
 	    				<th lay-data="{field:'orderprice', width:80, sort: true}">总价</th>
 	    				<th lay-data="{field:'osname', width:90, fixed: 'right'}">订单状态</th>
+	    				<th lay-data="{field:'ordernote', width:120}">订单备注</th>
 	    				<th lay-data="{fixed: 'right', width:178, align:'center', toolbar: '#barDemo'}"></th>
 	    			</tr>
 	    		</thead>
@@ -80,9 +82,9 @@
 		<a class="layui-btn layui-btn-normal layui-btn-xs" lay-event="sendgoods">发货</a>
 		<a class="layui-btn layui-btn-danger layui-btn-xs" lay-event="del">取消交易</a>
 		{{#  } else if(d.osname === '已发货') { }}
-		<a class="layui-btn layui-btn-xs layui-disabled" lay-event="role_power">等待确认收货</a>
+		<span>等待确认收货</span>
 		{{#  } else if(d.osname === '交易成功') { }}
-	<a class="layui-btn layui-btn-danger layui-btn-xs layui-disabled" lay-event="role_power">删除</a>
+		<a class="layui-btn layui-btn-danger layui-btn-xs layui-disabled" lay-event="role_power">删除</a>
 		{{#  } }}
 	</script>          
           
