--- a/application/backend/view/orderdetails.html
+++ b/application/backend/view/orderdetails.html
@@ -27,7 +27,7 @@
     	<div class="layui-timeline-content layui-text">
       		<h3 class="layui-timeline-title">顾客id</h3>
 		    <p>
-		      {$value0.userid}
+		      {$value0.uid}
 		    </p>
     	</div>
   	</li>
