--- a/application/index/view/login.html
+++ b/application/index/view/login.html
@@ -107,7 +107,10 @@ layui.use(['form', 'layedit', 'laydate'], function(){
       data:data.field,
       success:function(res){
         if(res == 'true'){
-          window.parent.location.reload();
+        	 alert('登录成功')
+        window.parent.location.reload();
+//      location.href = "{:url('index/index/index')}";
+          
         }else{
           alert('登录失败')
         }
