--- a/application/index/view/travelgoods.html
+++ b/application/index/view/travelgoods.html
@@ -1,21 +1,18 @@
 <!DOCTYPE html>
 <html>
 <head>
-    <meta charset="utf-8">
-    <title>前台首页</title>
+    <meta charset="UTF-8">
+    <title>商品列表</title>
     <meta name="renderer" content="webkit">
     <meta http-equiv="X-UA-Compatible" content="IE=edge,chrome=1">
     <meta name="viewport" content="width=device-width, initial-scale=1, maximum-scale=1">
     <link rel="stylesheet" href="__STATIC__/layui/css/layui.css">
     <link rel="stylesheet" type="text/css" href="__CSS__/public.css">
-<style type="text/css">
-#frm1{
-    width: 99%;
-    min-height: 100vh;
-    border: 0;
-}
-</style>
+    <link rel="stylesheet" type="text/css" href="__CSS__/travelmall.css">
+    <script src="__STATIC__/layui/layui.js"></script>
+    <script type="text/javascript" src = '__JS__/jquery-3.2.1.min.js'></script>
 </head>
+
 <body>
 <!--导航开始-->
 <div class="layui-layout layui-layout-admin">
@@ -26,7 +23,7 @@
         <ul class="layui-nav layui-layout-left"  lay-filter="demo">
             <li class="layui-nav-item"><a href="#">首页</a></li>
             <li class="layui-nav-item "><a href="#">目的地</a></li>
-            <li class="layui-nav-item"><a href="{:url('index/goods/travelmall')}">旅行商城<span class="layui-badge-dot"></span></a></li>
+            <li class="layui-nav-item layui-this"><a href="#">旅行商城<span class="layui-badge-dot"></span></a></li>
             <li class="layui-nav-item">
                 <a href="javascript:;">社区</a>
                 <dl class="layui-nav-child"> <!-- 二级菜单 -->
@@ -37,45 +34,106 @@
         </ul>
         <ul class="layui-nav layui-layout-right" id="nav_user"  lay-filter="nav_user">
             <li class="layui-nav-item">
-                {if condition = '$username == "请登录"'}
-                <a href="#" id="login">
-                    <img src="{$userHead}" class="layui-nav-img">
-                    请登录
+                <a href="javascript:;">
+                    <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
+                    贤心
                 </a>
-                {/if}
-                {if condition = '$username != "请登录"'}
-                <a href = "{:url('index/index/user_center')}">
-                    <img src="{$userHead}" class="layui-nav-img">{$username}
-                </a>
-                {/if}
-            <!--     <dl class="layui-nav-child">
+                <dl class="layui-nav-child">
                     <dd><a href="">基本资料</a></dd>
                     <dd><a href="">安全设置</a></dd>
-                </dl> -->
+                </dl>
             </li>
-            <li class="layui-nav-item">
-                {if condition = '$userBtn0 == "注销"'}
-                <a href="{:url('index/index/loginOut')}" id="loginOut">注销</a>
-                {/if}
-                {if condition = '$userBtn0 == "注册"'}
-                <a href="#" id="register">注册</a>
-                {/if}
-            </li>
+            <li class="layui-nav-item"><a href="#" id="loginOut">注销</a></li>
         </ul>
     </div>
 </div>
 <!--导航结束-->
-<div id="main">
-    <iframe id = 'frm1' name = 'ifr' src = "{:url('index/index/first')}"></iframe>
 
+<!--主体内容-->
+<div class="layui-container">
+	
+	<!--搜索框-->
+	<div class="layui-row becenter" style="margin: 30px;">
+		<div class="layui-inline">
+			<input style="width: 600px;" placeholder="输入景点名或目标城市" class="layui-input" >
+		</div>
+		<button placeholder="输入景点名或者目标城市" id="search" class="layui-btn layui-btn-warm" data-type="reload">
+			<i class="layui-icon layui-icon-search"></i>搜索
+		</button>
+	</div>
+	
+	<!--小导航-->
+	<div class="layui-row" style="margin: 10px;">
+		<span class="layui-breadcrumb">
+		  <a href="{:url('index/index/index')}">首页</a>
+		  <a href="{:url('index/goods/travelmall')}">旅行商城</a>
+		   <a><cite>商品选择</cite></a>
+		</span>
+	</div>
+	<hr class="layui-bg-blue">
+	
+	<!--商品-->
+	<div class="layui-row layui-col-space2">
+		<div class="layui-col-md7">
+			<!--商品内容-->
+			<div class="layui-tab">
+				<ul class="layui-tab-title">
+					<li class="layui-this">综合排序</li>
+					<li>销量优先</li>
+				</ul>
+				<div class="layui-tab-content">
+					<!--<div class="layui-tab-item layui-show">内容1</div>
+						<div class="layui-tab-item">内容2</div>-->
+					{foreach $travelgoods as $value}
+					<div style="margin: 30px;" class="layui-row layui-col-space2">
+						<div class="layui-col-md5">
+							<a href="traveldetails?goodsid={$value.goodsid}">
+								<img style="width:225px" src="{$value.image}" />
+							</a>
+						</div>
+						<div class="layui-col-md7">
+							<a href="traveldetails?goodsid={$value.goodsid}">
+								<p class="grayminis">已售{$value.soldqty}</p>
+								<p class="goodsname">{$value.name}</p>
+								<p style="margin: 8px 0;font-size: 12px;line-height: 24px;max-height: 48px;overflow: hidden;">{$value.intro}</p>
+								<span class="forprice">￥{$value.price}</span>
+							</a>
+							<button style="float: right;" class="layui-btn layui-btn-primary">立即购买</button>
+						</div>
+					</div>
+					{/foreach}
+					<br />
+					{$page}
+				</div>
+			</div>
+		</div>
+		<div class="layui-col-md3 layui-col-md-offset2">
+			<p style="margin: 15px; font-size: 16px;">本周热卖</p>
+			{foreach $bestSold as $val}
+			<div style="margin: 5px;" class="layui-row layui-col-space2">
+				<div class="layui-col-md6">
+					<img style="width: 120px;" src="{$val.image}" />
+				</div>
+				<div class="layui-col-md4">
+					<p>{$val.name}</p>
+					<p>￥{$val.price}</p>
+				</div>
+			</div>
+			{/foreach}
+		</div>
+	</div>
+	
+	
 </div>
+
+
 <!--页脚-->
 <div id="footer">
     <div class="ft_content">
         <div class="ft_info">
             <dl class="ft-info-col ft-info-intro">
                 <dt>全球旅游消费指南 </dt>
-                <dd>覆盖全球200多个国家和地区</dd>
+                <dd>覆盖全国百来个省市和地区</dd>
                 <dd><strong>100,000,000</strong> 位旅行者</dd>
                 <dd><strong>920,000</strong> 家国际酒店</dd>
                 <dd><strong>21,000,000</strong> 条真实点评</dd>
@@ -113,41 +171,29 @@
     </div>
 </div>
 <!--页脚结束-->
-</body>
-    <script src="__STATIC__/layui/layui.js"></script>
-    <script type="text/javascript" src = '__JS__/jquery-3.2.1.min.js'></script>
-<script>
 
-//注册
-document.getElementById('register').onclick = function(){
-    layui.use(['layer','table'], function(){ 
-    var layer = layui.layer;
-        layer.open({
-            type: 2,
-            title: '注册',
-            shadeClose: true,
-            shade: 0.8,
-            area: ['380px', '90%'],
-            content: '../index/register' //iframe的url
+
+</body>
+
+<script>
+    layui.use(['element'], function(){
+        var element = layui.element;
+        element.on('nav(demo)', function(elem){
+            console.log(elem); //得到当前点击的DOM对象
         });
-      //触发事件
-    });
-}
-//登录
-document.getElementById('login').onclick = function(){
-    layui.use(['layer','table'], function(){ 
-    var layer = layui.layer;
-        layer.open({
-            type: 2,
-            title: '登录',
-            shadeClose: true,
-            shade: 0.8,
-            area: ['380px', '90%'],
-            content: 'index/index/login' //iframe的url
+        element.on('navDelete(nav_user)',function (elem) {
+            console.log(elem);
         });
-      //触发事件
+        
+        
     });
-}
+
+    $("#loginOut").click(function () {
+        $("#nav_user").hide();
+    });
+
+    
 
 </script>
+
 </html>
