--- a/application/index/view/index.html
+++ b/application/index/view/index.html
@@ -24,9 +24,10 @@
             <a href="#" class="nav_logo"></a>
         </div>
         <ul class="layui-nav layui-layout-left"  lay-filter="demo">
-            <li class="layui-nav-item"><a href="#">首页</a></li>
-            <li class="layui-nav-item "><a href="#">目的地</a></li>
-            <li class="layui-nav-item"><a href="{:url('index/goods/travelmall')}">旅行商城<span class="layui-badge-dot"></span></a></li>
+            <li class="layui-nav-item"><a href="{:url('index/index/index')}">首页</a></li>
+            <li class="layui-nav-item "><a href="{:url('index/index/travels')}">写游记</a></li>
+            <!-- <li class="layui-nav-item "><a href="{:url('index/index/user_center')}">目的地</a></li> -->
+            <li class="layui-nav-item"><a href="{:url('index/index/goods')}">旅行商城<span class="layui-badge-dot"></span></a></li>
             <li class="layui-nav-item">
                 <a href="javascript:;">社区</a>
                 <dl class="layui-nav-child"> <!-- 二级菜单 -->
@@ -143,7 +144,7 @@ document.getElementById('login').onclick = function(){
             shadeClose: true,
             shade: 0.8,
             area: ['380px', '90%'],
-            content: 'index/index/login' //iframe的url
+            content: '../index/login' //iframe的url
         });
       //触发事件
     });
