--- a/application/backend/view/index.html
+++ b/application/backend/view/index.html
@@ -11,11 +11,11 @@
 <div id = 'backend'>
 <div class="layui-layout layui-layout-admin">
   <div class="layui-header">
-    <div class="layui-logo">说走就走</div>
+    <div class="layui-logo">说走就走后台管理</div>
     <!-- 头部区域（可配合layui已有的水平导航） -->
-    <ul class="layui-nav layui-layout-left">
+<!--     <ul class="layui-nav layui-layout-left">
       <li class="layui-nav-item"><a href="">控制台</a></li>
-      <li class="layui-nav-item"><a href="">景点管理</a></li>
+      <li class="layui-nav-item"><a href="">商品管理</a></li>
       <li class="layui-nav-item"><a href="">用户</a></li>
       <li class="layui-nav-item">
         <a href="javascript:;">其它系统</a>
@@ -25,70 +25,25 @@
           <dd><a href="">授权管理</a></dd>
         </dl>
       </li>
-    </ul>
+    </ul> -->
     <ul class="layui-nav layui-layout-right">
       <li class="layui-nav-item">
         <a href="javascript:;">
-          <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-          超级码力
+          {$username}
         </a>
-        <dl class="layui-nav-child">
+<!--         <dl class="layui-nav-child">
           <dd><a href="">基本资料</a></dd>
           <dd><a href="">安全设置</a></dd>
-        </dl>
+        </dl> -->
       </li>
-      <li class="layui-nav-item"><a href="">溜了</a></li>
+      <li class="layui-nav-item"><a href="{:url('backend/index/loginOut')}">溜了</a></li>
     </ul>
   </div>
   
   <div class="layui-side layui-bg-black" id="menu">
     <div class="layui-side-scroll">
-      <!-- 左侧导航区域（可配合layui已有的垂直导航） -->
-<!-- 		<ul class="layui-nav layui-nav-tree"  lay-filter="test">
-			<li class="layui-nav-item layui-nav-itemed">
-			  <a class="" href="javascript:;">所有商品</a>
-			  <dl class="layui-nav-child">
-			    <dd><a href="javascript:;">列表一</a></dd>
-			    <dd><a href="javascript:;">列表二</a></dd>
-			    <dd><a href="javascript:;">列表三</a></dd>
-			    <dd><a href="">超链接</a></dd>
-			  </dl>
-			</li>
-			<li class="layui-nav-item">
-			  <a href="javascript:;">解决方案</a>
-			  <dl class="layui-nav-child">
-			    <dd><a href="javascript:;">列表一</a></dd>
-			    <dd><a href="javascript:;">列表二</a></dd>
-			    <dd><a href="">超链接</a></dd>
-			  </dl>
-			</li>
-			<li class="layui-nav-item"><a href="">云市场</a></li>
-			<li class="layui-nav-item"><a href="">发布商品</a></li>
-		</ul> -->
-<!--       	<ul class="layui-nav layui-nav-tree"  lay-filter="test">
-			<li class="layui-nav-item layui-nav-itemed" v-for="item in menuArr" v-if = 'item.pfid == 0'>
-	      		<a class="" href="javascript:;">{{ item.pname }}</a>
-	      		<dl class="layui-nav-child">
-					<dd v-for="item1 in menuArr" v-if = 'item1.pfid == item.pid'>
-						<a v-bind:id="item1.purl" onclick="chk()">{{ item1.pname }}</a>
-					</dd>
-	      		</dl>
-	      	</li>
-		</ul> -->
 	    <ul class="layui-nav layui-nav-tree"  lay-filter="test">
-	    	<!-- <a></a> -->
-			<!-- 	<li class="layui-nav-item layui-nav-itemed" v-for="item in menuArr">
-		      		<a class="" href="javascript:;"></a>
-		      		<dl class="layui-nav-child">
-						<dd v-for="item1 in menuArr" v-if = 'item1.pfid == item.pid'>
-							<a v-bind:id="item1.purl" onclick="chk()"></a>
-						</dd>
-		      		</dl>
-		      	</li> -->
-
-
 {volist name="menu" id="vo"}
-
 	{if condition = '$vo.pfid == 0'}
 	<li class="layui-nav-item layui-nav-itemed">
 		<a class="" href="javascript:;">{$vo.pname}</a>
@@ -112,19 +67,19 @@
   <div class="layui-body">
     <!-- 内容主体区域 -->
     <div style="padding: 15px;">
-    	<iframe id = 'frm1' name = 'ifr' src = {:url('backend/index/travels')}></iframe>
+    	<iframe id = 'frm1' name = 'ifr' src = "{:url('backend/index/travels')}"></iframe>
     </div>
   </div>
   
   <div class="layui-footer">
     <!-- 底部固定区域 -->
-    © layui.com - 底部固定区域
+    <!-- © layui.com - 底部固定区域 -->
   </div>
 </div>
 </div>
 <script src="__STATIC__/layui/layui.js"></script>
 <!-- <script src="__JS__/jquery.js"></script> -->
-<!-- <script type="text/javascript" src = '__JS__/vue.js'></script> -->
+<script type="text/javascript" src = '__JS__/vue.js'></script>
 <script type="text/javascript" src = '__JS__/jquery-3.2.1.min.js'></script>
 <!-- <script src="https://unpkg.com/vue-router/dist/vue-router.js"></script> -->
 <script>
@@ -132,10 +87,6 @@
 layui.use('element', function(){
 	var element = layui.element;
 });
-function change(url){
-	console.log(url);
-	frm1.location.src=url;
-}
 
 </script>
 </body>
