--- a/application/index/view/user_center.html
+++ b/application/index/view/user_center.html
@@ -55,7 +55,7 @@
             </li>
         </ul>
     </div>
-  <div class="layui-side layui-bg-black" id="user_menu">
+  <div class="layui-side layui-bg-gray" id="user_menu">
     <div class="layui-side-scroll">
 	    <ul class="layui-nav layui-nav-tree"  lay-filter="test">
 {volist name="user_menu" id="vo"}
