--- a/application/index/view/travelmall.html
+++ b/application/index/view/travelmall.html
@@ -33,9 +33,8 @@
         </ul>
         <ul class="layui-nav layui-layout-right" id="nav_user"  lay-filter="nav_user">
             <li class="layui-nav-item">
-                <a href="javascript:;">
+                <a href = "{:url('index/index/user_center')}">
                     <img src="http://t.cn/RCzsdCq" class="layui-nav-img">
-                    贤心
                 </a>
                 <dl class="layui-nav-child">
                     <dd><a href="">基本资料</a></dd>
